        get.

2011-03-23  Elixirious

	* Fix ecore_con_url_ftp_upload upload the file until the end.

2011-03-29  PnB

	* Add ecore_con_url_ssl_ca_set to manually set a certificate authority.

2011-03-30  Carsten Haitzler (The Rasterman)

        * Ecore_X gains some more x sync counter controls and Ecore_Evas
        now uses the netwm sync protocol to get wm's to only configure
        as fast as it can keep drawing.

2011-04-05  Leif Middelschulte

       * Add ecore_x_randr_edid_* data extraction and validation functions
       for EDID structures.

2011-04-01  Cedric Bail

	* Add ecore_con_url_pipeline_set and ecore_con_url_pipeline_get for
	HTTP 1.1 pipelining support.

2011-04-05  Cedric Bail

	* Remove Ecore_Evas Cocoa backend that use depreacted Evas Quartz
	backend.

2011-04-11  Hannes Janetzek

	* Fix removal of windows from ignore_list with ecore_x_window_ignore_set

2011-04-13  Doyun Kang

	* Ecore_X + Ecore_Evas: Add more support for shape input setting

2011-04-15  Carsten Haitzler (The Rasterman)

        * Fix bug in Ecore_Evas setting modifiers for
        sub-buffer-canvas. They never got set. Now they do.

2011-04-19 Mike Blumenkrantz

        * Add ecore_exe_data_set

2011-04-20  Carsten Haitzler (The Rasterman)

        * Added ecore animator timeline, where animator runs for a
        specified time (in seconds) and then stops, but it also passes
        the position in the timeline (as a 0.0 to 1.0 value) to the
        callback which it can then use the new pos map call to map to
        some ease in/out, bounce, spring or whatever position.

2011-04-28  Eduardo Felipe Castegnaro

        * Add a monotonic clock implementation for Mac OS X to fix warning.
        Mac OS X does not provide an implementation of clock_gettime()
        even though it's POSIX, but it does provide a fast high-resolution
        monotonic clock through mach specific APIs that are perfectly suited
        for usage in ecore_timer.
